Ticket #PTAPP-151, fix the page link input style, removing the gap between itself and div container.

--- a/css/idxbroker.css
+++ b/css/idxbroker.css
@@ -78,8 +78,6 @@ input[type=text].error {
 	background-color: #F5F5F5;
 }
 #protocol {
-	height: 30px;
-	line-height: 30px;
 	vertical-align: middle;
 	margin-left: 5px;
 }
@@ -87,6 +85,11 @@ input[type=text].error {
 #page_link {
 	margin: 0;
 	height: 30px;
+	padding: 0 0 0 5px;
+	vertical-align: middle;
+	border-bottom: 0;
+	border-top: 0;
+	border-right: 0;	
 }
 
 #genSettings li {
